// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputSelect.svelte > should emit the change event when the value changes 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col open"
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="opened"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-opened"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <scroll
      class="absolute z-10 flex w-full flex-col overflow-scroll menu"
      style="top: 0px;"
    >
      <list
        aria-label="list"
        class="flex w-full flex-shrink-0 select-none flex-col list"
        role="listbox"
        tabindex="-1"
      >
        <!---->
         
        <!---->
        <item
          aria-selected="false"
          class="item"
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
          <!---->
          
          
          <!---->
           
          <p>
            a
          </p>
          <!---->
          <!---->
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          <!---->
          <!---->
          <!---->
          
          
          <!---->
           
          <p>
            b
          </p>
          <!---->
          <!---->
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          <!---->
          <!---->
          <!---->
          
          
          <!---->
           
          <p>
            c
          </p>
          <!---->
          <!---->
        </item>
        
        <!---->
      </list>
      <!---->
    </scroll>
    <!---->
  </input-select>
  <!---->
  
</div>
`;

exports[`InputSelect.svelte > should render items using custom component 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
</div>
`;

exports[`InputSelect.svelte > should render items using custom mapping 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
</div>
`;

exports[`InputSelect.svelte > should render items using default item when data is invalid 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
</div>
`;

exports[`InputSelect.svelte > should render items using field mappings 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
</div>
`;

exports[`InputSelect.svelte > should render using default field mapping 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col "
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
</div>
`;

exports[`InputSelect.svelte > should render with alternate class 1`] = `
<div>
  <input
    name="opt"
    type="hidden"
    value=""
  />
   
  <input-select
    aria-label=""
    class="relative flex flex-col myClass"
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="flex w-full items-center"
      role="option"
      tabindex="-1"
    >
      <item>
        <!---->
        <!---->
         
        <!---->
        <!---->
      </item>
      <!---->
       
      <rkt-icon
        aria-label="closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </selected-item>
     
    <!---->
  </input-select>
  <!---->
  
</div>
`;
